--- a/css/style.css
+++ b/css/style.css
@@ -11,34 +11,45 @@ body {
         font-family: 'ralewayregular';
         font-size: 15px;
         margin: 0px;
-        padding-top: 5px;
         background: #ffffff;
         overflow: auto;
 }
 
-h1 h2 h3 {
+h1 h2 h3 h4 {
     font-family: 'ralewayregular';
 }
+
 p {
     color: #000000;
     font-family: 'ralewayregular';
     font-size:15px;
 }
 
-header #logo {
-    padding-top: 5px;
+header {
+    background-color: #ffffff;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr auto 4fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "logo . nav";
 }
 
-/* Menu à aligner en haut*/
+header #logo {
+    padding-top: 10px;
+    grid-area: logo;
+}
+
 header nav.menu-nav {
     text-align: end;
+    grid-area: nav;
+    padding-top: 10px;
 }
     
 header nav.menu-nav li.bouton {
     display: inline-block;
     min-width: 20px;
     list-style-type: none;
-    margin-top: 5px;
+    margin-top: 20px;
 }
 
 header nav.menu-nav li.bouton a {
@@ -51,15 +62,32 @@ header nav.menu-nav li.bouton a {
 
 /* Monter et agrandir la ligne */
 header nav.menu-nav li.bouton:hover a {
-    color: #0065fc;
     text-decoration-line: overline;
-    line-height: 1px; 
+    color: #0065fc;
+    margin-top: 30px;
 }
 
-/* S'inscrire à part/couleur bleue */
-header .bleu {
-    color: #0065fc
+header nav.menu-nav li.blue  {
     font-weight: bold;
+    display: inline-block;
+    min-width: 20px;
+    list-style-type: none;
+    margin-top: 5px;
+}
+
+header nav.menu-nav li.blue a{
+    text-decoration: none;
+    padding: 0 10px;
+    text-align: center;
+    font-size: 15px;
+    color: #0065fc;
+}
+
+
+section1 h1 {
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
 }
 
 section1 form.search-box button.location {
@@ -72,7 +100,7 @@ section1 form.search-box button.location {
     border: none;
     padding: 0 10px;
     width: 50px;
-    height: 19px
+    height: 30px;
 }
 
 section1 form.search-box input {
@@ -84,7 +112,7 @@ section1 form.search-box input {
     border-right: 0;
     outline: none;
     width: 150px;
-    height: 18px;
+    height: 28px;
     padding: 0 10px;
 }
 
@@ -103,29 +131,42 @@ section1 form.search-box button {
     position: static;
     border: none;
     padding: 0 10px;
-    width: 150px;
-    height: 19px;
+    width: 100px;
+    height: 30px;
     font-family: 'ralewayregular';
+}
+
+
+section1 li.filtre {
+display: inline-block;
+list-style-type: none;
+text-decoration: none;
+line-height: 70px;
+padding: 10 0px;
+font-size: 1.2em;
+color: black;
+font-weight: bold;
 }
 
 section1 li.btn {
     display: inline-block;
-    min-width: 20px;
+    min-width: 30px;
     list-style-type: none;
     text-decoration: none;
     line-height: 70px;
     padding: 0 10px;
-    text-align: center;
+    text-align: left;
     font-size: 1.2em;
     color: black;
 }
 
 section1 span.icon {
-        width: 20px;
-        clip-path:ellipse(50% 50%);
-        background-color: #f2f2f2;
+        clip-path: circle(40% at 50% 50%);
+        background-color: #deebff;
         color: #0065fc;
-        padding: 0px;
+        padding: 15px;
+        justify-content: left;
+        font-weight: bold;
 }
 
 section1 button.filtres {
@@ -133,20 +174,59 @@ section1 button.filtres {
     color: #000000;
     font-family: 'ralewayregular';
     font-weight: bold;
-    border-radius: 5px 5px 5px 5px;
+    border-radius: 20px 20px 20px 20px;
     cursor: pointer;
     position: static;
     border: 1px solid #f2f2f2;
-    padding: 0 10px;
-    padding-left: 2px;
-    width: 150px;
-    height: 20px;
-
+    padding-left: 0;
+    padding-right: 20px;
+    width: auto;
+    height: 30px;
+    text-align: center;
 } 
 
+section1 i.fa-info-circle {
+    color: #ffffff; 
+} 
+
+section1 i.fa-circle {
+    color: #0065fc;
+}
+
+
 footer {
+    width: 100%;
+    display: grid; 
+    grid-template-columns: 2fr 2fr 2fr auto;
+    grid-template-rows: 1fr 2fr;
+    grid-area: "h3 h3 h3 .";
+    font-family: 'ralewayregular';
     background-color: #f2f2f2;
-    display: inline-flex;
+    justify-content: center;
+}
+
+/*enlever espace entre titre et p*/
+footer h3 {
+    grid-row-start: 1;
+    grid-column-end: span 1;
+}
+
+footer p {
+    grid-row-start: 2;
+    text-align: left;
+    line-height: 2em;
+}
+footer p.one {
+    grid-column: 1 / 4 ;
+    grid-row: 2 / 2;
+}
+footer p.two {
+    grid-column: 2 / 4 ;
+    grid-row: 2 / 2;
+}
+footer p.three {
+    grid-column: 3 / 4 ;
+    grid-row: 2 / 2;
 }
 
 footer a.lien {
@@ -157,8 +237,8 @@ footer a.lien {
     color: #000000;
 }
 
-footer a.lien:hover a {
-    color: #deebff;
+footer a.lien:hover {
+    color: #0065fc;
 }
    
 
