--- a/css/style.css
+++ b/css/style.css
@@ -26,107 +26,108 @@
 }
 
 body {
-        width: 100%;
         font-family: 'ralewaylight';
-        font-size: 15px;
-        margin: 1%;
+        font-size: 1em;
+        color: #000000;
         background: #ffffff;
-        overflow: auto;
 }
 
 h1 h2 h3 h4 {
     font-family: 'ralewaysemibold';
+    color: #000000;
 }
 
 p {
     color: #000000;
     font-family: 'ralewaylight';
-    font-size:15px;
 }
 
 header {
     background-color: #ffffff;
-    width: 100%;
     display: grid;
     grid-template-columns: 1fr auto 3fr;
+    /*grid-template-rows: max-content;*/
     grid-template-areas: "logo . nav";
-    font-size: 15px;
+    line-height: 80px;
+    width: 100%;
 }
 
 header #logo {
     grid-area: logo;
+    padding-top: 20px;
 }
 
-header nav.menu-nav {
+header nav {
     font-family: 'ralewaylight';
-    text-align: end;
     grid-area: nav;
 }
 
-header nav.menu-nav ul {
+header nav ul {
     height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    text-decoration: none;
     margin: 0;
     padding: 0;
 }
 
-header nav.menu-nav li.bouton {
+header nav li.bouton {
     height: 100%;
-    display: inline-flex;
-    column-gap: 30px; 
-    justify-content: flex-end;
+    display: flex;
+    width: 15ch;
+    justify-content: center;
     align-items: center;
-    min-width: 10%;
-    list-style-type: none;
 }
 
-header nav.menu-nav li.bouton a {
+header nav li.bouton a {
     text-decoration: none;
     text-align: center;
     color: black;
+    border-top: 2px solid transparent;
 }
 
-header nav.menu-nav li.bouton:hover a {
-    border-top: 1px solid #0065fc;
-    padding-top: 20px;
-    padding-bottom: 20px;
+header nav li.bouton:hover a {
     color: #0065fc;
+    border-top: 2px solid #0065fc;
+    padding-left: 20px;
+    padding-right: 20px;
 } 
-  
-
-header nav.menu-nav li.blue  {
+ 
+header nav li.blue  {
     font-family: 'ralewaysemibold';
-    display: inline-flex;
-    min-width: 20px;
-    padding-left: 30px;
-    padding-right: 30px;
-    list-style-type: none;
+    height: 100%;
+    width: 15ch;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    
 }
 
-header nav.menu-nav li.blue a{
+header nav li.blue a{
     text-decoration: none;
-    text-align: center;
     color: #0065fc;
 }
 
-section1 {
+
+#bloc1 {
     height: 100%;
     margin: 0;
-    font-size: 15px;
 }
-section1 h1 {
+
+#bloc1 h1 {
     font-family : "ralewaysemibold";
     font-size: 25px;
     font-weight: bolder;
-    padding-bottom: 0%;
     padding-top: 20px;
     line-height:0%;
 }
 
-section1 p {
+#bloc1 p {
     padding-top: 0%;
 }
 
-section1 form.search-box {
+#bloc1 form.search-box {
     width: 100%;
     display: inline-flex;
     flex-wrap: nowrap;
@@ -137,19 +138,19 @@ section1 form.search-box {
     padding: 10px 0;
 }
 
-section1 form.search-box button.location {
+#bloc1 form.search-box button.location {
     background-color: #f2f2f2;
     color: #000000;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 3mm 0 0 3mm;
     cursor: pointer;
     position: static;
     border: none;
     padding: 0 10px;
-    width: 80px;
+    width: 40px;
     height: 40px;
 }
 
-section1 form.search-box input {
+#bloc1 form.search-box input {
     position: static;
     border-top: 1px solid #f2f2f2;
     border-bottom: 1px solid #f2f2f2;
@@ -157,21 +158,24 @@ section1 form.search-box input {
     border-right: 0;
     outline: none;
     padding: 0 10px;
-    width: 150px;
+    width: 200px;
     height: 38px;
+    font-family: 'ralewaysemibold';
+    font-size: 1em;
 }
 
-section1 form.search-box input.search-txt {
+#bloc1 form.search-box input.search-txt {
     font-family: 'ralewaysemibold';
+    font-size: 1em;
     font-weight: bold;
     color: #000000;
     opacity: 1.0;
 }
 
-section1 form.search-box button { 
+#bloc1 form.search-box button { 
     background-color: #0065fc;
     color: #ffffff;
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 0 3mm 3mm 0;
     cursor: pointer;
     position: static;
     border: none;
@@ -181,19 +185,19 @@ section1 form.search-box button {
     font-family: 'ralewaylight';
 }
 
-section1 .filtre {
+#bloc1 .filtre {
     font-family : "ralewaysemibold";
-    font-size: 15px;
+    font-size: 20px;
     color: #000000;
     display: inline-flex;
     flex-wrap: wrap;
     gap: 15px;
     align-items: center;
     place-content: content;
-    padding: 10px 0;;
+    padding: 10px 0;
 }
 
-section1 li.btn {
+#bloc1 li.btn {
     display: inline-flex;
     flex-wrap: nowrap;
     min-width: 20px;
@@ -202,9 +206,10 @@ section1 li.btn {
     padding: 0 10px;
     font-size: 1.2em;
     color: black;
+
 }
 
-section1 span.icon {
+#bloc1 span.icon {
         clip-path: circle(40% at 50% 50%);
         background-color: #deebff;
         color: #0065fc;
@@ -214,11 +219,11 @@ section1 span.icon {
         left: -15px;
         height: 41px;
         font-weight: normal;
-
 }
 
-section1 button.filtres {
+#bloc1 button.filtres {
     font-family : "ralewaysemibold";
+    font-size: 15px;
     font-weight: bold;
     background-color: #ffffff;
     color: #000000;
@@ -230,16 +235,16 @@ section1 button.filtres {
     height: 38px;
 } 
 
-section1 .info {
+#bloc1 .info {
     display: flex;
-    flex-wrap: wrap;
-    padding: 20px 0;
+    flex-wrap: nowrap;
+    padding: 10px 0;
     align-items: center;
 }
-section1 i.fa-info-circle {
+#bloc1 i.fa-info-circle {
     color: #ffffff; 
 }
-section1 i.fa-circle {
+#bloc1 i.fa-circle {
     color: #0065fc;
 }
 #cercle {
@@ -251,56 +256,45 @@ section1 i.fa-circle {
 footer {
     width: 100%;
     display: grid; 
-    grid-template-columns: 2fr 2fr 2fr auto;
-    grid-template-rows: 1fr 2fr;
-    grid-area: "h3 h3 h3 .";
-    font-family: 'ralewayregular';
+    grid-template-columns: 1fr 1fr 1fr auto;
     background-color: #f2f2f2;
+    padding: 20px 20px;
 }
 
 footer h3 {
-    grid-area: "h3";
-    grid-row-start: 1;
-    grid-column-end: span 1;
-
+    line-height: 0%;
+    font-family : "ralewaysemibold";
 }
 
-footer h3 p {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: column;
-    justify-content: space-around; 
-    align-items: left;
-}
-footer p {
-    grid-row-start: 2;
-    line-height: 2em;
-}
-footer p.one {
-    grid-column: 1 / 4 ;
-    grid-row: 2 / 2;
-}
-footer p.two {
-    grid-column: 2 / 4 ;
-    grid-row: 2 / 2;
-}
-footer p.three {
-    grid-column: 3 / 4 ;
-    grid-row: 2 / 2;
-}
-
-footer a.lien {
+footer ul {
+    height: 100%;
     text-decoration: none;
-    padding: 0 10px;
-    text-align: center;
-    font-size: 15px;
+    margin: 0;
+    line-height: 40px;
+}
+
+footer li {
+    list-style-type: none;
+    text-decoration: none;
+
     color: #000000;
 }
 
-footer a.lien:hover {
-    color: #0065fc;
+footer li a {
+    text-decoration: none;
+    color: #000000;
 }
+
+footer a {
+    text-decoration: none;
+    color: #000000;
+}
+
+footer li:hover a {
+    color: #0065fc;
+} 
+
+
    
 
   
