--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,253 +1,307 @@
-.blocs {
-    width: 98%;
+strong {
+    line-height: 0%;
+    font-family : "ralewaysemibold";
+}
+
+#bloc2 {
+    width: auto;
     height: auto;
     display: grid; 
-    grid-template-columns: 3fr 1.5fr;
+    grid-template-columns: 7fr 3fr;
     grid-template-rows: auto;
-    grid-gap: 20px;
-    margin: 0px;
+    grid-column-gap: 40px;
+    margin: 0;
+    padding: 0;
+    align-self: center;
 }
 
-bloc1.hbt {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px auto 10px;
+#hebergement {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
     background-color: #f2f2f2;
-    border-radius: 30px;
-    width: 100%;
-    height: auto;
-}
-
-    
-table1.hbt {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    background-color: #f2f2f2;
-    border-radius: 20px;
+    border-radius: 6mm;
     width: auto;
     height: auto;
+    padding: 20px;
 }
 
-bloc1.hbt h2 {
+#hebergement h2 {
     font-family: "ralewaysemibold";
     font-weight: bold;
-    margin: 20px;
+    line-height: 10px;
+    padding-left: 20px;
 }
 
-table1.hbt div {
-    background-color: #ffffff;
-    border-radius: 20px;
-    border: 2px solid #ffffff;
+.section1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 20px;
+    background-color: #f2f2f2;
+    border-radius: 6mm;
     width: auto;
-    margin: 20px;
-    padding: 1%;
     height: auto;
+    margin: 0px;
+    padding: 0px;
+    align-self: center;
 }
-table1.hbt p.one {
+
+.section1 article {
+    background-color: #ffffff;
+    border-radius: 6mm;
+    border: 3px solid #ffffff;
+    width: 250px;
+    height: 180px;
+    overflow: visible;
+    box-shadow: 3px 3px 8px #f2f2f2;
+}
+.section1 article.one {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
 }
-table1.hbt p.two {
+.section1 article.two {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
 }
-table1.hbt p.three {
+.section1 article.three {
     grid-column: 3 / 3;
     grid-row: 1 / 2;
 }
-table1.hbt p.four {
+.section1 article.four {
     grid-column: 1 / 3;
     grid-row: 2 / 2;
 }
-table1.hbt p.five {
+.section1 article.five {
     grid-column: 2 / 3;
     grid-row: 2 / 2;
 }
-table1.hbt p.six {
+.section1 article.six {
     grid-column: 3 / 3;
     grid-row: 2 / 2;
 }
 
-table1.hbt a {
+.section1 article a {
     text-decoration: none;
-    font-size: 15px;
     color: black;
 }
 
-table1.hbt img.image {
+.section1 img {
     object-fit: cover;
     max-width: 100%;
     width: 100%;
-    height: 150px;
-    display: block;
-    border-radius: 20px 20px 0 0;
+    height: 60%;
+    border-radius: 5.5mm 5.5mm 0 0;
 }
 
-table1.hbt stars i.fa-star.grey {
+.section1 p {
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-left: 15px;
+}
+
+.section1 .rating i.fa-star.grey {
 	color: #f2f2f2;
 	cursor: pointer;
 	padding: 0.0625rem;
 }
-table1.hbt stars i.fa-star.blue {
+.section1 .rating i.fa-star.blue {
 	color: #0065fc;
 }
-table1.hbt .stars {
+.section1 .rating {
 		display: inline-flex;
-        justify-content: left;
-		font-size: 3em;
+        justify-content: flex-start;
+		font-size: 15px;
+        padding-left: 15px;
 }
-table1.hbt stars i.fa-star:hover {
+.section1 .rating i.fa-star:hover {
 		color: #0065fc;
 }
 
-table1.hbt h4 {
-    text-align: left;
+#hebergement h4 {
     font-family: 'ralewaysemibold';
-    padding: 20px 20px;
+    line-height: 10px;
+    padding-top: 40px;
+    padding-left: 20px;
 } 
-
-bloc2.pop {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px auto;
-    background-color: #f2f2f2;
-    border-radius: 30px;
-    width: 100%;
-    height: auto;
+#hebergement h4 a {
+    text-decoration: none;
+    color: black;
 }
 
-table2.pop {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+#populaire {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
     background-color: #f2f2f2;
-    border-radius: 30px;
+    border-radius: 6mm;
     width: auto;
     height: auto;
+    padding: 20px;
 }
 
-bloc2.pop h2 {
+#populaire h2 {
     display: inline-flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
     font-family: "ralewaysemibold";
     font-weight: bold;
-    margin: 20px;
+    line-height: 10px;
+}
+i.fa-line-chart {
+    line-height: 10px;
+    padding-right: 20px;
 }
 
-table2.pop div {
-    background-color: #ffffff;
-    border-radius: 30px;
-    width: auto;
-    height: 150px;
-    margin: 20px;
-    padding: 1%;
-    border: #ffffff solid 2px;
-}  
+.section2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 20px;
+    background-color: #f2f2f2;
+    border-radius: 6mm;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
-table2.pop p.one {
+.section2 article {
+    background-color: #ffffff;
+    border-radius: 6mm;
+    width: 330px;
+    height: 150px;
+    border: 3px solid #ffffff;
+    overflow: visible;
+    box-shadow: 3px 3px 10px #f2f2f2;
+}  
+.section2 article.one {
+    grid-column: 1;
     grid-row: 1 / 3;
 }
-table2.pop p.two {
+.section2 article.two {
+    grid-column: 1;
     grid-row: 2 / 3;
 }
-table2.pop p.three {
+.section2 article.three {
+    grid-column: 1;
     grid-row: 3 / 3;
 }
 
-table2.pop img.image {
+.section2 img {
     object-fit: cover;
     max-width: 100%;
-    width: 150px;
-    height: 150px;
-    border-radius: 20px 0 0 20px;
+    width: 40%;
+    height: 100%;
+    border-radius: 5.5mm 0 0 5.5mm;
     float: left;
 }
 
-table2.pop stars i.fa-star.grey {
+.section2 p {
+    /*display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;*/
+}
+
+.section2 .rating i.fa-star.grey {
 	color: #f2f2f2;
 	cursor: pointer;
-	padding: 0.0625rem;
+
 }
-table2.pop stars i.fa-star.blue {
+.section2 .rating i.fa-star.blue {
 	color: #0065fc;
 }
-table2.pop .stars {
+.section2 .rating {
     display: inline-flex;
-    justify-content: flex-end;
-	font-size: 3em;
+    flex-wrap: nowrap;
+    justify-content: left;
+	font-size: 15px;
+    padding-left: 10px;
 }
-table2.pop stars i.fa-star:hover {
+.section2 .rating i.fa-star:hover {
 	color: #0065fc;
 }
 
-.activités h2 {
+aside {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+aside h2 {
     font-family: "ralewaysemibold";
     font-weight: bold;
-    margin: 20px;
 }
 
-.activités {
-    background-color: #ffffff;
+.activite {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 50px 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat (3, 200px);
+    grid-gap: 30px;
+    width: auto;
+    height: auto;
+    padding: 0;
+    margin: 0;
+}
+
+.activite img {
+    border-radius: 6mm 6mm 0 0;
+    height: 100%;
     width: 100%;
-    height: auto;
-}
-
-.wrapper {
-    width: 98%;
-    height: auto;
-    padding: 1%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
-    grid-template-rows: auto auto;
-    grid-gap: 20px;
-}
-
-.wrapper p {
-    background-color: #ffffff;
-    border-radius: 20px;
-    border: 2px solid #f2f2f2;
-    font-weight: bold;
-}
-.wrapper p.one {
-    grid-column: 1 / 1;
-    grid-row: 1 / 2;
-    grid-row-end: span 2;
-}
-.wrapper p.two {
-    grid-column: 2 / 4;
-    grid-row: 1 / 2;
-}
-.wrapper p.three {
-    grid-column: 2 / 4;
-    grid-row: 2 / 2;
-}
-.wrapper p.four {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-    grid-row-end: span 2;
-}
-.wrapper p.five {
-    grid-column: 4 / 4;
-    grid-row: 1 / 2;
-}
-.wrapper p.six {
-    grid-column: 4 / 4;
-    grid-row: 2 / 2;
-}
-
-.wrapper img.image {
+    overflow: hidden;
     object-fit: cover;
-    border-radius: 20px 20px 0 0;
-
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
 }
 
-/* Effet hover ombre sur vignettes*/
+.activite figcaption {
+    justify-content: left;
+    font-family: "ralewaysemibold";
+    background-color: #ffffff;
+    font-weight: bold;
+    width: 100%;
+    height: 50px;
+    padding: 20px 20px;
+}
+.activite figure {
+    border-radius: 6mm 6mm 6mm 6mm;
+    width : auto;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    box-shadow: 5px 5px 20px #f2f2f2;
+}
+.activite figure.one {
+    grid-column: 1;
+    grid-row: 1/ span 3;
+    height: 600px;
+}
+.activite figure.two {
+    grid-column: 2;
+    grid-row: 1/ span 2;
+    height: 385px;
+}
+.activite figure.three {
+    grid-column: 2;
+    grid-row: 3;
+    height: 185px;
+}
+.activite figure.four {
+    grid-column: 3;
+    grid-row: 1/ span 3;
+    height: 600px;
+}
+.activite figure.five {
+    grid-column: 4;
+    grid-row: 1;
+    height: 185px;
+}
+.activite figure.six {
+    grid-column: 4;
+    grid-row: 2 / span 3;
+    height: 385px;
+}
+
 
