--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
-@font-face {
+/*@font-face {
     font-family: "ralewayregular";
     src: url("../font/raleway-regular-webfont.woff2") format("woff2"),
         url("../font/raleway-regular-webfont.woff") format("woff"),
         url('../font/Raleway-Regular.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
-}
-
+}*/
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
 @font-face {
     font-family: 'ralewaysemibold';
     src: url('../font/raleway-semibold-webfont.woff2') format('woff2'),
@@ -16,6 +16,7 @@
     font-style: normal;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 @font-face {
     font-family: 'ralewaylight';
     src: url('../font/raleway-light-webfont.woff2') format('woff2'),
@@ -30,6 +31,19 @@ body {
         font-size: 1em;
         color: #000000;
         background: #ffffff;
+        margin: 5px;
+}
+@media screen and (max-width: 480px) {
+    body {
+        display: block;  
+        clear: both;
+    }
+}
+@media screen and (max-width: 767px) {
+    body {
+        display: block;  
+        clear: both;
+    }
 }
 
 h1 h2 h3 h4 {
@@ -43,13 +57,12 @@ p {
 }
 
 header {
-    background-color: #ffffff;
+    background-color: #fff;
     display: grid;
     grid-template-columns: 1fr auto 3fr;
-    /*grid-template-rows: max-content;*/
     grid-template-areas: "logo . nav";
-    line-height: 80px;
-    width: 100%;
+    line-height: 90px;
+    width: 100%;;
 }
 
 header #logo {
@@ -69,6 +82,19 @@ header nav ul {
     text-decoration: none;
     margin: 0;
     padding: 0;
+}
+@media screen and (max-width: 480px) {
+    header li.bouton {
+        display: flex;  
+        flex-wrap: wrap;
+    }
+}
+@media screen and (max-width: 767px) {
+    header nav li.bouton {
+        display: flex;  
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
 }
 
 header nav li.bouton {
@@ -100,45 +126,53 @@ header nav li.blue  {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
-    
+    text-decoration: none;   
 }
-
-header nav li.blue a{
+@media screen and (max-width: 480px) {
+    header nav li.blue {
+        display: flex;  
+        flex-wrap: wrap;
+    }
+}
+header nav li.blue a {
     text-decoration: none;
     color: #0065fc;
 }
 
-
-#bloc1 {
+main {
     height: 100%;
+    width: 100%;
     margin: 0;
+    padding-top: 30px;
 }
 
-#bloc1 h1 {
+main h1 {
     font-family : "ralewaysemibold";
     font-size: 25px;
     font-weight: bolder;
-    padding-top: 20px;
     line-height:0%;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-bottom: 0;
 }
 
-#bloc1 p {
+main p {
     padding-top: 0%;
+    line-height: 0;
 }
 
-#bloc1 form.search-box {
+main form.search-box {
     width: 100%;
     display: inline-flex;
     flex-wrap: nowrap;
     column-gap: 0;
     justify-content: flex-start;
     align-items: center;
-    min-width: 10%;
     padding: 10px 0;
 }
 
-#bloc1 form.search-box button.location {
+main form.search-box button.location {
     background-color: #f2f2f2;
     color: #000000;
     border-radius: 3mm 0 0 3mm;
@@ -146,11 +180,12 @@ header nav li.blue a{
     position: static;
     border: none;
     padding: 0 10px;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
+    font-size: 15px;
 }
 
-#bloc1 form.search-box input {
+main form.search-box input {
     position: static;
     border-top: 1px solid #f2f2f2;
     border-bottom: 1px solid #f2f2f2;
@@ -159,20 +194,20 @@ header nav li.blue a{
     outline: none;
     padding: 0 10px;
     width: 200px;
-    height: 38px;
+    height: 48px;
     font-family: 'ralewaysemibold';
-    font-size: 1em;
+    font-size: 15px;
 }
 
-#bloc1 form.search-box input.search-txt {
+main form.search-box input.search-txt {
     font-family: 'ralewaysemibold';
-    font-size: 1em;
+    font-size: 15px;
     font-weight: bold;
     color: #000000;
     opacity: 1.0;
 }
 
-#bloc1 form.search-box button { 
+main form.search-box button { 
     background-color: #0065fc;
     color: #ffffff;
     border-radius: 0 3mm 3mm 0;
@@ -181,47 +216,59 @@ header nav li.blue a{
     border: none;
     padding: 0 10px;
     width: 100px;
-    height: 40px;
+    height: 50px;
     font-family: 'ralewaylight';
+    font-size: 15px;
 }
 
-#bloc1 .filtre {
+main .filtre {
     font-family : "ralewaysemibold";
-    font-size: 20px;
+    font-size: 15px;
     color: #000000;
     display: inline-flex;
     flex-wrap: wrap;
-    gap: 15px;
     align-items: center;
-    place-content: content;
-    padding: 10px 0;
+    column-gap: 20px;
+    justify-content: space-between;
+    padding: 10px 20px;
 }
 
-#bloc1 li.btn {
+main .filtre h4 {
+    padding-right: 0;
+}
+
+main li.btn {
     display: inline-flex;
     flex-wrap: nowrap;
-    min-width: 20px;
     list-style-type: none;
     text-decoration: none;
     padding: 0 10px;
-    font-size: 1.2em;
+    font-size: 15px;
     color: black;
-
+    position: relative;
 }
 
-#bloc1 span.icon {
-        clip-path: circle(40% at 50% 50%);
-        background-color: #deebff;
-        color: #0065fc;
-        padding: 15px;
-        justify-content: left;
-        position: relative;
-        left: -15px;
-        height: 41px;
-        font-weight: normal;
+main span.icon {
+    clip-path: circle(40% at 50% 50%);
+    background-color: #deebff;
+    color: #0065fc;
+    padding: 21px;
+    justify-content: left;
+    position: absolute;
+    left: 5px;
+    top: -6px;
+    animation: rotation 8s infinite linear;
 }
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
 
-#bloc1 button.filtres {
+main button.filtres {
     font-family : "ralewaysemibold";
     font-size: 15px;
     font-weight: bold;
@@ -232,22 +279,33 @@ header nav li.blue a{
     position: static;
     border: 2px solid #f2f2f2;
     width: auto;
-    height: 38px;
+    height: 48px;
+    padding-left: 60px;
+    padding-right: 30px;
 } 
 
-#bloc1 .info {
+main button.filtres:hover {
+    background-color: #deebff;
+    color: #0065fc;
+    transition: 2s;
+}
+
+main .info {
     display: flex;
-    flex-wrap: nowrap;
-    padding: 10px 0;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding-left: 0;
     align-items: center;
+    justify-content: left;
 }
-#bloc1 i.fa-info-circle {
+main i.fa-info-circle {
     color: #ffffff; 
+
 }
-#bloc1 i.fa-circle {
+main i.fa-circle {
     color: #0065fc;
 }
-#cercle {
+main #cercle {
     clip-path: circle(50% at 50% 50%);
     color:#f2f2f2;
 }
@@ -260,6 +318,22 @@ footer {
     background-color: #f2f2f2;
     padding: 20px 20px;
 }
+@media screen and (max-width: 480px) {
+    footer {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+@media screen and (max-width: 767px) {
+    footer {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
 
 footer h3 {
     line-height: 0%;
@@ -267,6 +341,7 @@ footer h3 {
 }
 
 footer ul {
+    width: 100%;
     height: 100%;
     text-decoration: none;
     margin: 0;
@@ -276,7 +351,6 @@ footer ul {
 footer li {
     list-style-type: none;
     text-decoration: none;
-
     color: #000000;
 }
 
