--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,50 +1,61 @@
-strong {
-    line-height: 0%;
-    font-family : "ralewaysemibold";
-}
-
-#bloc2 {
-    width: auto;
+section {
+    width: 100%;
     height: auto;
-    display: grid; 
-    grid-template-columns: 7fr 3fr;
-    grid-template-rows: auto;
-    grid-column-gap: 40px;
-    margin: 0;
-    padding: 0;
-    align-self: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    column-gap: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #hebergement {
     display: flex;
+    flex: 7;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     background-color: #f2f2f2;
     border-radius: 6mm;
     width: auto;
     height: auto;
-    padding: 20px;
+    padding: 30px;
 }
 
 #hebergement h2 {
     font-family: "ralewaysemibold";
     font-weight: bold;
-    line-height: 10px;
-    padding-left: 20px;
+    line-height: 30px;
 }
 
 .section1 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 20px;
-    background-color: #f2f2f2;
+    grid-gap: 30px;
     border-radius: 6mm;
-    width: auto;
+    width: 100%;
     height: auto;
     margin: 0px;
     padding: 0px;
     align-self: center;
+}
+@media screen and (max-width: 480px) {
+    .section1 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 767px) {
+    .section1 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .section1 article {
@@ -52,9 +63,11 @@ strong {
     border-radius: 6mm;
     border: 3px solid #ffffff;
     width: 250px;
-    height: 180px;
+    height: 200px;
     overflow: visible;
-    box-shadow: 3px 3px 8px #f2f2f2;
+    box-shadow: 0px 0px 20px #D3D3D3;
+    display: block;
+    clear: both;
 }
 .section1 article.one {
     grid-column: 1 / 3;
@@ -94,35 +107,47 @@ strong {
     border-radius: 5.5mm 5.5mm 0 0;
 }
 
-.section1 p {
-    margin-bottom: 0;
-    margin-top: 0;
+.section1 :hover img {
+
+  }
+
+.section1 h4 {
+    line-height: 0px;
     padding-left: 15px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.section1 p {
+    margin-bottom: 5px;
+    margin-top: 5px;
+    padding-left: 15px;
+    line-height: 0px;
 }
 
 .section1 .rating i.fa-star.grey {
 	color: #f2f2f2;
 	cursor: pointer;
-	padding: 0.0625rem;
 }
 .section1 .rating i.fa-star.blue {
 	color: #0065fc;
 }
 .section1 .rating {
-		display: inline-flex;
-        justify-content: flex-start;
-		font-size: 15px;
-        padding-left: 15px;
+	display: inline-flex;
+    justify-content: flex-start;
+	font-size: 15px;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    line-height: 0px;
 }
 .section1 .rating i.fa-star:hover {
-		color: #0065fc;
+	color: #0065fc;
 }
 
 #hebergement h4 {
     font-family: 'ralewaysemibold';
-    line-height: 10px;
-    padding-top: 40px;
-    padding-left: 20px;
+    line-height: 30px;
 } 
 #hebergement h4 a {
     text-decoration: none;
@@ -130,14 +155,15 @@ strong {
 }
 
 #populaire {
+    flex: 3;
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     background-color: #f2f2f2;
     border-radius: 6mm;
     width: auto;
     height: auto;
-    padding: 20px;
+    padding: 30px;
 }
 
 #populaire h2 {
@@ -147,34 +173,55 @@ strong {
     flex-wrap: nowrap;
     font-family: "ralewaysemibold";
     font-weight: bold;
-    line-height: 10px;
+    line-height: 30px;
 }
 i.fa-line-chart {
-    line-height: 10px;
-    padding-right: 20px;
+    line-height: 30px;
+    padding-right: 10px;
 }
 
 .section2 {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 20px;
+    grid-gap: 30px;
     background-color: #f2f2f2;
     border-radius: 6mm;
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: 0;
     padding: 0;
+    align-self: center;
+}
+@media screen and (max-width: 480px) {
+    .section2 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 767px) {
+    .section2 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .section2 article {
     background-color: #ffffff;
     border-radius: 6mm;
-    width: 330px;
+    width: 350px;
     height: 150px;
     border: 3px solid #ffffff;
     overflow: visible;
-    box-shadow: 3px 3px 10px #f2f2f2;
+    box-shadow: 0px 0px 20px #D3D3D3;
+    display: block;
+    clear: both;
 }  
 .section2 article.one {
     grid-column: 1;
@@ -198,11 +245,19 @@ i.fa-line-chart {
     float: left;
 }
 
+.section2 h4 {
+    font-family: "ralewaysemibold";
+    margin-top: 10px;
+    margin-bottom: 0;
+    text-indent: 15px;
+    padding-top: 10px;
+    line-height: 0%;
+}
 .section2 p {
-    /*display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-around;*/
+    margin-top: -10px;
+    margin-bottom: 40px;
+    text-indent: 15px;
+    padding-top: 10px;
 }
 
 .section2 .rating i.fa-star.grey {
@@ -216,17 +271,19 @@ i.fa-line-chart {
 .section2 .rating {
     display: inline-flex;
     flex-wrap: nowrap;
-    justify-content: left;
+    justify-content: flex-end;
 	font-size: 15px;
-    padding-left: 10px;
+    margin-bottom: 5px;
+    margin-top: 0;
+    padding-left: 15px;
 }
 .section2 .rating i.fa-star:hover {
 	color: #0065fc;
 }
 
 aside {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 aside h2 {
@@ -237,71 +294,102 @@ aside h2 {
 .activite {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat (3, 200px);
+    grid-template-rows: repeat (3, 170px);
     grid-gap: 30px;
     width: auto;
     height: auto;
     padding: 0;
     margin: 0;
 }
+@media screen and (max-width: 480px) {
+    .activite {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+@media screen and (max-width: 767px) {
+    .activite {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
 
 .activite img {
-    border-radius: 6mm 6mm 0 0;
+    border-radius: 6mm 6mm 6mm 6mm;
     height: 100%;
     width: 100%;
     overflow: hidden;
     object-fit: cover;
+    z-index: 2;
 }
 
 .activite figcaption {
-    justify-content: left;
     font-family: "ralewaysemibold";
     background-color: #ffffff;
     font-weight: bold;
     width: 100%;
-    height: 50px;
-    padding: 20px 20px;
+    height: 35px;
+    position: absolute;
+    text-align: left;
+    text-indent: 15px;
+    padding-top: 20px;
+    z-index: 3;
+    border-radius: 0 0 5.5mm 5.5mm;
+    bottom: 0%;
 }
+
+@media screen and (max-width: 767px) {
+    .activite figcaption {
+        text-align: center;
+    }
+}
+
 .activite figure {
     border-radius: 6mm 6mm 6mm 6mm;
-    width : auto;
+    width : 100%;
     height: auto;
     padding: 0;
     margin: 0;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    box-shadow: 5px 5px 20px #f2f2f2;
+    box-shadow: 0px 0px 20px #D3D3D3;
+    position: relative;
+    z-index: 1;
 }
 .activite figure.one {
     grid-column: 1;
     grid-row: 1/ span 3;
-    height: 600px;
+    height: 510px;
 }
 .activite figure.two {
     grid-column: 2;
     grid-row: 1/ span 2;
-    height: 385px;
+    height: 325px;
 }
 .activite figure.three {
     grid-column: 2;
     grid-row: 3;
-    height: 185px;
+    height: 155px;
 }
 .activite figure.four {
     grid-column: 3;
     grid-row: 1/ span 3;
-    height: 600px;
+    height: 510px;
 }
 .activite figure.five {
     grid-column: 4;
     grid-row: 1;
-    height: 185px;
+    height: 155px;
 }
 .activite figure.six {
     grid-column: 4;
     grid-row: 2 / span 3;
-    height: 385px;
+    height: 325px;
 }
 
 
